name:                herbert
version:             0.1.0.0
synopsis:            Key-signing server for the cloud
license:             MIT
license-file:        LICENSE
author:              Vincent Ambo
maintainer:          vincent@kivra.com
copyright:           Vincent Ambo, 2015
category:            Security
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8,
                       HsOpenSSL == 0.11.*,
                       acid-state == 0.12.*,
                       aeson == 0.8.*,
                       bytestring >= 0.10,
                       http-types == 0.8.*,
                       ixset >= 1.0.6,
                       lens == 4.6.*,
                       mtl == 2.1.*,
                       mime-mail >= 0.4,
                       options == 1.2.*,
                       safecopy == 0.8.*,
                       scotty == 0.9.*,
                       smtp-mail == 0.1.*,
                       text >= 1.2,
                       time >= 1.4,
                       transformers == 0.3.*,
                       uuid == 1.3.*,
                       wai >= 3.0,
                       wai-logger >= 2.2,
                       yaml == 0.8.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
                     OverloadedStrings
  exposed-modules:
                  Types.Certificate
                  Types.CA
                  Types.CSR
                  Types.Common
                  CSRUtils
                  Config
                  Herbert
                  Server
                  Storage
                  Notify

executable herbert-bin
  main-is: Main.hs
  build-depends: base, herbert
  default-language: Haskell2010


test-suite herbert-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Tests.hs
  build-depends: base >= 4.7 && <4.8,
                 herbert,
                 Cabal,
                 HUnit,
                 tasty == 0.10.*,
                 tasty-hunit == 0.9.*,
                 acid-state,
                 lens,
                 old-locale,
                 time,
                 ixset
